2015-01-22  Kaz Kylheku  <kaz@kylheku.com>

	Basic implementation of constantp. Does not
	recognize forms like (+ 2 2) as constant.

	* eval.c (constantp_noex, constantp): New functions.
	(eval_init): Registered constantp as intrinsic.

	* tl.vim, txr.vim: Updated.

	* txr.1: Documented constantp.

2015-01-21  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (get_string): New argument, close_after_p.
	Close the stream unless close_after_p is specified and is nil,
	or when it is missing, an there is no compatibility or it's
	newer than version 102.

	* stream.h (get_string): Updated declartion.

	* txr.1: Documented default closing behavior of get-string
	and the new optional argument for overriding it.

2015-01-21  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Minor fix in split-str-set documentation.

2015-01-21  Kaz Kylheku  <kaz@kylheku.com>

	Allow macros to tell what symbols have lexical function
	or variable bindings.

	* eval.c (lexical_var_p, lexical_fun_p): New local functions.
	(eval_init): Registered as intrinsics.

	* txr.1: Documented lexical-var-p and lexical-fun-p.

	* tl.vim, txr.vim: Updated.

2015-01-13  Kaz Kylheku  <kaz@kylheku.com>

	Version 102

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise

	* tl.vim, txr.vim: Regenerated.

2015-01-12  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (zerop): Handle character arguments.
	(plusp, minusp): New functions.

	* eval.c (eval_init): Register plusp and minusp.

	* lib.h (plusp, minusp): Declared.

	* txr.1: Documented plusp and minusp, and the
	handling of characters by zerop.

2015-01-12  Kaz Kylheku  <kaz@kylheku.com>

	Fix for LLVM wchar_t literals not being four byte
	aligned, affecting OS X port.

	* configure: Detect a SIZEOF_WCHAR_T when detecting integer
	type that will hold a pointer. In the lit_align test,
	if we are on Apple Mac OSX, use a lit_align of 2,
	so the logic kicks in for padding literals and handling
	misalignment.
